--- a/main.css
+++ b/main.css
@@ -1,12 +1,15 @@
 body{
-
+ font-family: "Lato", sans-serif;
+ font-size: 16px;
+ line-height: 1.5;
+ color: #212121;
 }
 
 h1, h2, h3, h4 {
 
 }
 
-ol {
+ol, ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
@@ -17,7 +20,13 @@ ul{
 }
 
 a{
+  color: #ff4081;
+}
 
+a:active,
+a:hover,
+a:focus{
+  color: #212121;
 }
 
 .hero {
@@ -42,10 +51,17 @@ a{
 
 .news-link{
   color: #3f51b5;
+  display: block;
   font-size: 24px;
+  margin-bottom: 10px;
 }
 
 .container{
   margin: 0 auto;
   max-width: 800px;
+}
+
+.news-meta-item{
+  display: inline;
+  margin-right: 15px;
 }
