input and animations

--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ ul{
 
 a{
   color: #ff4081;
+  transition: 0.2s ease-in-out;
 }
 
 a:active,
@@ -70,6 +71,43 @@ a:focus{
 .is-liked {
   animation: flash 2s;
 }
+
+.is-visible{
+  opacity: 1;
+  visibility: visible;
+  height: auto;
+}
+
+/*Form*/
+
+.form{
+  height: 0;
+  margin-bottom: 20px;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.form.is-visible{
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  height: auto;
+}
+.form-label{
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.form-input {
+  border-bottom: 1px solid #b6b6b6;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 100%;
+  padding:10px;
+  width: 100%;
+}
+
 
 /*Animation*/
 @keyframes flash{
